# mp4_lib

./: readme.txt
MyMp4v2/: CMakeLists.txt  CMakeLists.txt.user.b81d367  CMakeLists.txt.user.dc49e39  MP4Encoder.cpp  MP4Encoder.h  MP4Encoder1.cpp  MP4Encoder1.h  main.cpp
mp4v2/: CMakeLists.txt  CMakeLists.txt.user.b81d367  CMakeLists.txt.user.dc49e39
mp4v2/convert/: CMakeLists.txt  MP4Encoder.cpp  MP4Encoder.h  main.cpp
mp4v2/mp4file/: CMakeLists.txt  MP4Encoder.cpp  MP4Encoder.h  main.cpp
mp4v2/mux/: CMakeLists.txt  main.cpp
